   <android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
<!--  CONTENT GOES HERE -->


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >







    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

   <!--     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patternSize"
            android:id="@+id/PatternSizeTV"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" /> -->

        <com.kohlerbear.whowascnscalc.hoang8f.segmented.SegmentedGroup
            android:id="@+id/patternSegmentGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/patternButtonFourDays"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@+string/pattern4" />

            <RadioButton
                android:id="@+id/patternButtonFiveDays"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@+string/pattern5" />

            <RadioButton
                android:id="@+id/patternButtonSixDays"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@+string/pattern6" />

            <RadioButton
                android:id="@+id/patternButtonSevenDays"
                style="@style/RadioButton"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@+string/pattern7" />
        </com.kohlerbear.whowascnscalc.hoang8f.segmented.SegmentedGroup>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/choiceLayout"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/choice_7"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_6"
            android:layout_marginTop="20dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_7" />

        <TextView
            android:id="@+id/choice_6"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_5"
            android:layout_marginTop="21dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_6" />

        <TextView
            android:id="@+id/choice_5"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_4"
            android:layout_marginTop="20dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_5" />

        <TextView
            android:id="@+id/choice_4"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_3"
            android:layout_marginTop="20dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_4" />

        <TextView
            android:id="@+id/choice_3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_2"
            android:layout_marginTop="20dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_3" />

        <TextView
            android:id="@+id/choice_2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choice_1"
            android:layout_marginTop="20dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_2" />

        <TextView
            android:id="@+id/choice_1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="38dp"
            android:background="@drawable/choice"
            android:gravity="center"
            android:text="@string/choice_1"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/choice1Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/choice_1"
            android:layout_alignLeft="@+id/choice2Field"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/choice2Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/choice1Field"
            android:layout_toRightOf="@+id/choice_2"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/choice3Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/choice_4"
            android:layout_alignLeft="@+id/choice2Field"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/choice4Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choice_3"
            android:layout_toRightOf="@+id/choice_4"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/choice5Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/choice_5"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/choice_5"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/choice6Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/choice_6"
            android:layout_alignBottom="@+id/choice_6"
            android:layout_alignLeft="@+id/choice5Field"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/choice7Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/choice_7"
            android:layout_alignLeft="@+id/choice6Field"
            android:ems="10"
            android:inputType="numberDecimal" />


    </RelativeLayout>


          <!--   <Spinner
        android:id="@+id/numberCyclesSpinnerNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/cycles_array" /> -->

            <LinearLayout
                android:id="@+id/liftLayout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/choiceLayout">

                <TextView
                    android:id="@+id/option5"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/option4"
                    android:layout_marginTop="8dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_5"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/option4"
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/option3"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_4"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/option2"
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/option1"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_2"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/option3"
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/option2"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_3"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/option1"
                    android:layout_weight="1"
                    android:layout_width="55dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/option"
                    android:gravity="center"
                    android:text="@string/option_1"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>




</RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <com.kohlerbear.whowascnscalc.hoang8f.segmented.SegmentedGroup
                android:id="@+id/poundKilogramSegmentedButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/kgSegmentedButton"
                    style="@style/RadioButton"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Kilograms" />

                <RadioButton
                    android:id="@+id/lbSegmentedButton"
                    style="@style/RadioButton"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:text="@string/Pounds" />
            </com.kohlerbear.whowascnscalc.hoang8f.segmented.SegmentedGroup>
            </RelativeLayout>


            <Button
                android:id="@+id/customButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:text="@string/AdjustActivity_Custom"
                android:layout_weight="1"
                android:background="#546E7A"
                android:textColor="#ffffff"
                android:padding="0dp"
                android:layout_marginLeft="-5dip"
                android:layout_marginRight="-5dip"
                android:layout_marginBottom="-5dip"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>



    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp"
        android:background="#d6d6d6"/>
</android.support.v4.widget.DrawerLayout>